Add a method to allow an ant to continue his journey if there is no targeted track

--- a/Anthill.vcxproj
+++ b/Anthill.vcxproj
@@ -152,6 +152,9 @@
     <ClCompile Include="food.cpp" />
     <ClCompile Include="track.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="AnthillClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
