--- a/Anthill.vcxproj.filters
+++ b/Anthill.vcxproj.filters
@@ -48,4 +48,7 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="AnthillClassDiagram.cd" />
+  </ItemGroup>
 </Project>
