--- a/Anthill.vcxproj.filters
+++ b/Anthill.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="food.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="AnthillClassDiagram.cd" />
