--- a/Anthill.vcxproj
+++ b/Anthill.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="anthill.cpp" />
     <ClCompile Include="coord.cpp" />
     <ClCompile Include="food.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="track.cpp" />
   </ItemGroup>
   <ItemGroup>
