--- a/Anthill.vcxproj.filters
+++ b/Anthill.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="food.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="garden.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="track.cpp">
@@ -48,6 +51,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="garden.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
