--- a/Anthill.vcxproj.filters
+++ b/Anthill.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="garden.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="track.cpp">
@@ -59,5 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="AnthillClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Anthill.rc">
+      <Filter>Fichiers de ressources</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
