Fixed issues preventing the program from running correctly

--- a/Anthill.vcxproj
+++ b/Anthill.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="AnthillClassDiagram.cd" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Anthill.rc" />
